log
Wed 13 Mar 2024 04:48:26 PM UTC: 
 tests:  0|5
total_score: 0/70
5e0b5ce
Wed 13 Mar 2024 07:31:37 PM UTC: 
 exercises.c | 30 ++++++++++++++----------------
 1 file changed, 14 insertions(+), 16 deletions(-)
 tests:  0|5
total_score: 0/70
a08b177
Wed 13 Mar 2024 07:32:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a09fa1e
Wed 13 Mar 2024 07:33:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
7137ff8
Wed 13 Mar 2024 07:33:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a198402
Wed 13 Mar 2024 07:35:00 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
10192d6
Wed 13 Mar 2024 07:36:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
df31381
Wed 13 Mar 2024 07:37:31 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
181df7a
Wed 13 Mar 2024 07:41:44 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
296f946
Fri 15 Mar 2024 05:01:33 PM UTC: 
 tests:  2|3
total_score: 20/70
7293553
Fri 15 Mar 2024 05:04:17 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6233b1b
Fri 15 Mar 2024 05:11:41 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:10: error: unused variable ‘pilaAux’ [-Werror=unused-variable]
  106 |   Stack *pilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b55b64
Fri 15 Mar 2024 05:11:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cb6a2d1
Fri 15 Mar 2024 05:12:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
af4b899
Fri 15 Mar 2024 05:12:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
650a559
Fri 15 Mar 2024 05:13:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d40f8cd
Fri 15 Mar 2024 05:16:14 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:9: error: unused variable ‘pilaAux’ [-Werror=unused-variable]
  106 |  Stack *pilaAux = create_stack();
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
58c5d9b
Fri 15 Mar 2024 05:16:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
dde40d4
Fri 15 Mar 2024 05:21:05 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:10: error: unused variable ‘x’ [-Werror=unused-variable]
  112 |     int* x = pop(P1);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
72f2d39
Fri 15 Mar 2024 05:21:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:10: error: unused variable ‘x’ [-Werror=unused-variable]
  112 |     int* x = pop(P1);
      |          ^
exercises.c:116:24: error: ‘x’ undeclared (first use in this function)
  116 |   printf("ELEM: %i", (*x));
      |                        ^
exercises.c:116:24: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a302504
Fri 15 Mar 2024 05:21:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
56a1621
Fri 15 Mar 2024 05:23:45 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
9573b17
Mon 18 Mar 2024 04:35:29 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|2
total_score: 40/70
77d1e74
Mon 18 Mar 2024 04:39:28 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
3c5c897
Mon 18 Mar 2024 04:41:53 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
52b6a48
Mon 18 Mar 2024 04:42:25 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
2558b38
Mon 18 Mar 2024 04:42:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4c4222c
Mon 18 Mar 2024 04:43:09 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c7a4ed
Mon 18 Mar 2024 04:43:38 PM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  3|2
total_score: 40/70
bdf9ad1
Mon 18 Mar 2024 04:44:51 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
b0d2b65
Mon 18 Mar 2024 04:45:41 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
a1b054a
Mon 18 Mar 2024 04:48:19 PM UTC: 
 exercises.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:118:8: error: unused variable ‘elem2’ [-Werror=unused-variable]
  118 |   int *elem2 = top(pilaAux);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b2cbfe9
Mon 18 Mar 2024 04:48:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7cd7437
Mon 18 Mar 2024 04:49:53 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
0f45e0b
Mon 18 Mar 2024 04:51:38 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|2
total_score: 40/70
3de28ca
Mon 18 Mar 2024 04:56:27 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|2
total_score: 40/70
609fe14
Mon 18 Mar 2024 05:00:14 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
f789ab0
Mon 18 Mar 2024 05:01:07 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
575f578
Mon 18 Mar 2024 05:01:58 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
9e68d62
Mon 18 Mar 2024 05:02:47 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
05d8ec6
Mon 18 Mar 2024 05:09:31 PM UTC: 
 exercises.c | 47 ++++++++++++++---------------------------------
 1 file changed, 14 insertions(+), 33 deletions(-)
 tests:  4|1
total_score: 50/70
1d01358
Mon 18 Mar 2024 05:12:23 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
5d80dce
Mon 18 Mar 2024 09:33:07 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
52ced38
